--- a/doc/cap_copy_ext.3
+++ b/doc/cap_copy_ext.3
@@ -1,7 +1,4 @@
-.\"
-.\" $Id: cap_copy_ext.3,v 1.1.1.1 1999/04/17 22:16:31 morgan Exp $
-.\"
-.TH CAP_COPY_EXT 3 "26th May 1997" "" "Linux Programmer's Manual"
+.TH CAP_COPY_EXT 3 "2008-05-11" "" "Linux Programmer's Manual"
 .SH NAME
 cap_copy_ext, cap_size, cap_copy_int \- capability state
 external representation translation
@@ -16,12 +13,11 @@ external representation translation
 .sp
 Link with \fI-lcap\fP.
 .SH DESCRIPTION
-These functions translate a capability state from an internal representation
-into an external one.
-The external representation is an exportable, contiguous,
-persistent representation of a capability state in user-managed space.  The
-internal representation is managed by the capability functions in working
-storage.
+These functions translate between internal and external
+representations of a capability state.  The external representation is
+an exportable, contiguous, persistent representation of a capability
+state in user-managed space.  The internal representation is managed
+by the capability functions in working storage.
 .PP
 .BR cap_size ()
 returns the total length (in bytes) that the capability state in working
@@ -43,13 +39,12 @@ from system managed space to user-managed space (pointed to by
 and returns the length of the resulting data record.  The size parameter
 represents the maximum size, in bytes, of the resulting data record.  The
 .BR cap_copy_ext ()
-function will do any conversions necessary to convert the capability state
-from the undefined internal format to an exportable, contiguous, persistent
-data record.
-It is the responsibility of the user to allocate a buffer large
-enough to hold the copied data.
-The buffer length required to hold the copied
-data may be obtained by a call to the
+function will do any conversions necessary to convert the capability
+state from the undefined internal format to an exportable, contiguous,
+persistent data record.  It is the responsibility of the user to
+allocate a buffer large enough to hold the copied data.  The buffer
+length required to hold the copied data may be obtained by a call to
+the
 .BR cap_size ()
 function.
 .PP
@@ -58,12 +53,14 @@ copies a capability state from a capability data record in user-managed
 space to a new capability state in working storage, allocating any
 memory necessary, and returning a pointer to the newly created capability
 state.  The function initializes the capability state and then copies
-the capability state from the record painted to by
+the capability state from the record pointed to by
 .I ext_p
 into the capability state, converting, if necessary, the data from a
 contiguous, persistent format to an undefined, internal format.  Once
 copied into internal format, the object can be manipulated by the capability
-state manipulation functions.  Note that the record pointed to by
+state manipulation functions (see
+.BR cap_clear (3)).
+Note that the record pointed to by
 .I ext_p
 must have been obtained from a previous, successful call to
 .BR cap_copy_ext ()
