--- a/doc/cap_from_text.3
+++ b/doc/cap_from_text.3
@@ -224,6 +224,7 @@ main(int argc, char *argv[])
 .fi
 .SH "SEE ALSO"
 .BR cap_clear (3),
+.BR cap_compare (3),
 .BR cap_copy_ext (3),
 .BR cap_get_file (3),
 .BR cap_get_proc (3),
