A libcap.3 man page and fix up the cap_get_pid() docs.
Make it easier to find what functions are available in
the API.

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/doc/cap_clear.3
+++ b/doc/cap_clear.3
@@ -124,6 +124,7 @@ and
 .BR cap_compare ()
 are Linux extensions.
 .SH "SEE ALSO"
+.BR libcap (3),
 .BR cap_copy_ext (3),
 .BR cap_from_text (3),
 .BR cap_get_file (3),
