--- a/doc/cap_init.3
+++ b/doc/cap_init.3
@@ -77,6 +77,7 @@ or
 .SH "CONFORMING TO"
 These functions are specified in the withdrawn POSIX.1e draft specification.
 .SH "SEE ALSO"
+.BR libcap (3),
 .BR cap_clear (3),
 .BR cap_copy_ext (3),
 .BR cap_from_text (3),
