--- a/doc/cap_copy_ext.3
+++ b/doc/cap_copy_ext.3
@@ -95,6 +95,7 @@ or
 .SH "CONFORMING TO"
 These functions are specified in the withdrawn POSIX.1e draft specification.
 .SH "SEE ALSO"
+.BR libcap (3),
 .BR cap_clear (3),
 .BR cap_from_text (3),
 .BR cap_get_file (3),
