--- a/doc/cap_from_text.3
+++ b/doc/cap_from_text.3
@@ -223,6 +223,7 @@ main(int argc, char *argv[])
 }
 .fi
 .SH "SEE ALSO"
+.BR libcap (3),
 .BR cap_clear (3),
 .BR cap_compare (3),
 .BR cap_copy_ext (3),
