--- a/doc/cap_get_file.3
+++ b/doc/cap_get_file.3
@@ -115,6 +115,7 @@ and
 will have the Effective flag enabled for each capability that has the
 Permitted or Inheritable flag enabled.
 .SH "SEE ALSO"
+.BR libcap (3),
 .BR cap_clear (3),
 .BR cap_copy_ext (3),
 .BR cap_from_text (3),
