Add an example program to verify that a file has specific capabilities.
This program is not installed by default. Its more of a code sample
to help folk trying to put such checks into other programs (package
managers for example).

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/doc/cap_clear.3
+++ b/doc/cap_clear.3
@@ -98,7 +98,7 @@ returned value carries further information about which of three sets,
 differ. Specifically, the macro
 .B CAP_DIFFERS
 .RI ( status ", " flag )
-evaluates to 0 if the returned status differs in its
+evaluates to non-zero if the returned status differs in its
 .I flag
 components.
 .SH "RETURN VALUE"
