--- a/doc/setcap.8
+++ b/doc/setcap.8
@@ -1,28 +1,48 @@
 .\"
 .\" $Id: setcap.8,v 1.1.1.1 1999/04/17 22:16:31 morgan Exp $
 .\"
-.TH SETCAP 8 "26th April 1997"
+.TH SETCAP 8 "24th October 2008"
 .SH NAME
 setcap \- set file capabilities
 .SH SYNOPSIS
-\fBsetcap\fP (\fIcapabilities|-|-r) filename\fP [ ... \fIcapabilitiesN\fP \fIfileN\fP ]
+\fBsetcap\fP [-q] [-v] (\fIcapabilities|-|-r) filename\fP [ ... \fIcapabilitiesN\fP \fIfileN\fP ]
 .SH DESCRIPTION
+In the absence of the
+.B -v
+(verify) option
 .B setcap
 sets the capabilities of each specified
 .I filename
 to the
 .I capabilities
 specified.  The
+.B -v
+option is used to verify that the specified capabilities are currently
+associated with the file.
+.PP
+The
 .I capabilities
 are specified in the form described in
 .IR cap_from_text (3).
 .PP
-The special filename, '\-',
+The special capability string,
+.BR '-' ,
 can be used to indicate that capabilities are read from the standard
 input. In such cases, the capability set is terminated with a blank
 line.
 .PP
-The option, '-r', can be used to remove a capability set from a file.
+The special capability string,
+.BR '-r' ,
+is used to remove a capability set from a file.
+.PP
+The
+.B -q
+flag is used to make the program less verbose in its output.
+.SH "EXIT CODE"
+The
+.B setcap
+program will exit with a 0 exit code if successful. On failure, the
+exit code is 1.
 .SH "SEE ALSO"
 .IR cap_from_text (3),
 .IR cap_set_file (3),
