etcap(8): use .BR in SEE ALSO
Signed-off-by: Mike Frysinger <vapier@gentoo.org>

--- a/doc/getcap.8
+++ b/doc/getcap.8
@@ -23,6 +23,6 @@ prints quick usage.
 .IR filename .
 One file per line.
 .SH "SEE ALSO"
-.IR cap_get_file (3),
-.IR cap_to_text (3),
-.IR setcap (8)
+.BR cap_get_file (3),
+.BR cap_to_text (3),
+.BR setcap (8)
