--- a/doc/setcap.8
+++ b/doc/setcap.8
@@ -44,6 +44,6 @@ The
 program will exit with a 0 exit code if successful. On failure, the
 exit code is 1.
 .SH "SEE ALSO"
-.IR cap_from_text (3),
-.IR cap_set_file (3),
-.IR getcap (8)
+.BR cap_from_text (3),
+.BR cap_set_file (3),
+.BR getcap (8)
