getcap(8): fix filename section split
Signed-off-by: Mike Frysinger <vapier@gentoo.org>

--- a/doc/getcap.8
+++ b/doc/getcap.8
@@ -20,7 +20,8 @@ enables to display all searched entries, even if it has no file-capabilities.
 .TP 4
 .B -h
 prints quick usage.
-.IR filename .
+.TP 4
+.IR filename
 One file per line.
 .SH "SEE ALSO"
 .BR cap_get_file (3),
