capsh: Support SHELL environment variable to run instead of /bin/bash
Instead of invoking /bin/bash, refer the SHELL environment
variable to get preferable shell. This falls into /bin/sh
if SHELL is not set.

Signed-off-by: Masami Hiramatsu <mhiramat@kernel.org>

--- a/doc/capsh.1
+++ b/doc/capsh.1
@@ -21,7 +21,7 @@ Display prevailing capability and related state.
 .TP
 .BI -- " [args]"
 Execute
-.B /bin/bash
+.B ${SHELL}
 with trailing arguments. Note, you can use
 .B -c 'command to execute'
 for specific commands.
