capsh: Add --exec option to execute command directly
Add --exec option to execute given command right
after '--' directly, instead of SHELL.
This allows users to execute given command directly
into chrooted environment, so that they can eliminate
any shell commands from new rootfs.

Signed-off-by: Masami Hiramatsu <mhiramat@kernel.org>

--- a/doc/capsh.1
+++ b/doc/capsh.1
@@ -33,6 +33,11 @@ again with remaining arguments. Useful for testing
 .BR exec ()
 behavior.
 .TP
+.BI --exec
+Execute given command after
+.B --
+directly, instead of SHELL.
+.TP
 .BI --caps= cap-set
 Set the prevailing process capabilities to those specified by
 .IR cap-set .
